unpackaged/main/default/objects/Contact/fields/Personal_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Personal_Vehicle__c</fullName>
    <inlineHelpText>Are you visiting us using your personal vehicle or any other means of transport.</inlineHelpText>
    <label>Personal Vehicle.</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>