unpackaged/main/default/objects/Contact/fields/Source_System_Id_del__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Id_del__c</fullName>
    <label>Source_System_Id__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>