unpackaged/main/default/objects/Contact/fields/Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number__c</fullName>
    <inlineHelpText>Enter the number of vehicle you are having with you when you visiting us.</inlineHelpText>
    <label>Vehicle Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>