unpackaged/main/default/objects/Contact/validationRules/Take_Vehicle_number_if_personal_vehicle.validationRule-meta.xml
<ValidationRule>
    <fullName>Take_Vehicle_number_if_personal_vehicle</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Personal_Vehicle__c , &#39;YES&#39;) &amp;&amp;  ISBLANK( Vehicle_Number__c )</errorConditionFormula>
    <errorDisplayField>Vehicle_Number__c</errorDisplayField>
    <errorMessage>As you have selected yes in the personal vehicle option; you must enter your vehicle number</errorMessage>
</ValidationRule>