unpackaged/main/default/objects/Contact/listViews/All_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Personal_Vehicle__c</columns>
    <columns>Vehicle_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>