unpackaged/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Personal_Vehicle__c</columns>
    <columns>Vehicle_Number__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Contacts</label>
</ListView>